--- a/index.html
+++ b/index.html
@@ -1,22 +1,58 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-        <meta name="description" content="homepage">
-        <meta name="author" content="Kevin Chen">
-        <title> BundleUp </title>
+  <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+      <meta name="description" content="homepage">
+      <meta name="author" content="Kevin Chen">
+      <title> BundleUp </title>
 
-        <!-- CSS -->
-        <link rel="stylesheet" type="text/css" href="css/ink.css">
-        <link rel="stylesheet" type="text/css" href="css/master.css">
-        <link rel="stylesheet" type="text/css" href="css/index.css">
+      <!-- CSS -->
+      <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+      <link rel="stylesheet" type="text/css" href="css/jumbotron.css">
+      <link rel="stylesheet" type="text/css" href="css/index.css">
 
-        <!-- JS/JQuery-->
-        <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-        <script type="text/javascript" src="js/bootstrap.js"></script>
-    </head>
-    <body>
-    </body>
+
+      <!-- JS/JQuery-->
+      <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+      <script type="text/javascript" src="js/bootstrap.js"></script>
+  </head>
+  <body>
+    <div class="container">
+      <div class="header">
+        <ul class="nav nav-pills pull-right">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <h3 class="text-muted">BundleUp</h3>
+      </div>
+
+      <div class="weather-header">
+        <div id="imagewrap" class="pull-left">
+          <img id="weather" src="imgs/cloudy.jpg"/>
+        </div>
+        <h3 id="weather-text"> Temperature Range: <span> 50 F - 70F </span> <br/>
+        Chance of Precipitation: 40% <br/>
+        Wind: 25mph, SW </h3>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="suggestion">
+            <img class="sugg-img pull-left"src="imgs/shortsleeve.jpg"/>
+            <p> Short-Sleeve Shirt </p>
+          </div>
+          <div class="suggestion">
+            <img class="sugg-img pull-left"src="imgs/shortsleeve.jpg"/>
+            <p> Short-Sleeve Shirt </p>
+          </div>
+          <div class="suggestion">
+            <img class="sugg-img pull-left"src="imgs/shortsleeve.jpg"/>
+            <p> Short-Sleeve Shirt </p>
+          </div>
+        </div>
+    </div> 
+  </body>
 </html>
