--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <!-- JS/JQuery-->
       <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
       <script type="text/javascript" src="js/bootstrap.js"></script>
+      <script type="text/javascript" src="js/bundleup.js"></script>
   </head>
   <body>
     <div class="container">
@@ -33,7 +34,7 @@
         <div id="imagewrap" class="pull-left">
           <img id="weather" src="imgs/cloudy.jpg"/>
         </div>
-        <h3 id="weather-text"> Temperature Range: <span> 50 F - 70F </span> <br/>
+        <h3 id="weather-text"> Temperature Range: <span></span>F <br/>
         Chance of Precipitation: 40% <br/>
         Wind: 25mph, SW </h3>
       </div>
