--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <div id="imagewrap" class="pull-left">
           <img id="weather" src="imgs/cloudy.jpg"/>
         </div>
-        <h3 id="weather-text"> Temperature Range: <span></span>F <br/>
-        Chance of Precipitation: 40% <br/>
+        <h3 id="weather-text"> Temperature Range: <span id="temp"></span>F <br/>
+        Chance of Precipitation: <span id="precip"></span>% <br/>
         Wind: 25mph, SW </h3>
       </div>
 
