--- a/index.html
+++ b/index.html
@@ -41,15 +41,21 @@
 
       <div class="row">
         <div class="col-lg-12">
-          <div class="suggestion">
+          <div class="suggestion" id="cold" style="display: none">
             <img class="sugg-img pull-left"src="imgs/shortsleeve.jpg"/>
+            <img class="sugg-img pull-left"src="imgs/shortsleeve.jpg"/>
+            <img class="sugg-img pull-left"src="imgs/shortsleeve.jpg"/>  
             <p> Short-Sleeve Shirt </p>
           </div>
-          <div class="suggestion">
+          <div class="suggestion" id="mild" style="display: none">
             <img class="sugg-img pull-left"src="imgs/shortsleeve.jpg"/>
-            <p> Short-Sleeve Shirt </p>
+            <img class="sugg-img pull-left"src="imgs/shortsleeve.jpg"/>
+            <img class="sugg-img pull-left"src="imgs/shortsleeve.jpg"/>             
+	    <p> Short-Sleeve Shirt </p>
           </div>
-          <div class="suggestion">
+          <div class="suggestion" id="warm" style="display: none">
+            <img class="sugg-img pull-left"src="imgs/shortsleeve.jpg"/>
+            <img class="sugg-img pull-left"src="imgs/shortsleeve.jpg"/>
             <img class="sugg-img pull-left"src="imgs/shortsleeve.jpg"/>
             <p> Short-Sleeve Shirt </p>
           </div>
